# mlt_sandbox

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.MD
.github/workflows/: cmake.yml
app/: application.c  application.h  version.h
app/debug/: console_color.h  log_libs.c  log_libs.h
app/utils/: delay.h
config/: common.cmake  desktop.cmake  mcu.cmake
libs/SEGGER_RTT_V762c/Config/: SEGGER_RTT_Conf.h
libs/SEGGER_RTT_V762c/Syscalls/: SEGGER_RTT_Syscalls_GCC.c
scripts/: flash_fw.jlink
targets/: CMakeLists.txt
targets/desktop/: CMakeLists.txt  delay.c  main.c
targets/stm32l0xx/: .mxproject  CMakeLists.txt  LowPower.ioc  Makefile  STM32L052C8Tx_FLASH.ld
targets/stm32l0xx/Inc/: main.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
targets/stm32l0xx/Src/: adc.c  gpio.c  i2c.c  main.c  rtc.c  spi.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c
targets/stm32l0xx/hw/: delay.c
test/: CMakeLists.txt  common_test.c
